# meshi

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  package.xml  simple_stepper_control.ino
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/robot_config/: ingredient_status.h  ingredient_statusRequest.h  ingredient_statusResponse.h  user_status.h  user_statusRequest.h  user_statusResponse.h
catkin_ws/devel/share/common-lisp/ros/robot_config/srv/: _package.lisp  _package_ingredient_status.lisp  _package_user_status.lisp  ingredient_status.lisp  robot_config-srv.asd  user_status.lisp
catkin_ws/devel/share/db/cmake/: db-msg-extras.cmake  db-msg-paths.cmake  dbConfig.cmake
catkin_ws/devel/share/robot_config/cmake/: robot_config-msg-extras.cmake  robot_config-msg-paths.cmake  robot_configConfig.cmake
catkin_ws/src/db/: CMakeLists.txt  package.xml
catkin_ws/src/db/src/: database.cpp  database.h
catkin_ws/src/robot_config/: CMakeLists.txt  package.xml
catkin_ws/src/robot_config/srv/: ingredient_status.srv  user_status.srv
catkin_ws/src/vision_system/: CMakeLists.txt  package.xml
simple_stepper_control/: simple_stepper_control.ino
